--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,9 @@
   <!-- Blur load images-->
   <script src="https://cdn.jsdelivr.net/npm/progressively/dist/progressively.min.js"></script>
   <!-- Quicklink prefecth link -->
-  <script src="/assets/js/quicklink/dist/quicklink.umd.js"></script>
+  <script src="{{ site.github.url }}/assets/js/quicklink/dist/quicklink.umd.js"></script>
   <!-- PWA functionality -->
-  <script async src="/assets/js/main.js" type="text/javascript"></script>
+  <script async src="{{ site.github.url }}/assets/js/main.js" type="text/javascript"></script>
   <script type="text/javascript" async
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
     MathJax.Hub.Config({
