--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,25 @@ title: Home
   {% endif %}
   <p>
     {{ post.content | strip_html | truncate: 350 }} <a class="read-more" href="{{ site.github.url }}{{ post.url }}">Leer más</a>
-    <span class="post-date"><i class="fa fa-calendar" aria-hidden="true"></i> {{ post.date | date_to_string }} - <i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</span>
+    <span class="post-date">
+        <span class="post-date"><i class="fa fa-calendar" aria-hidden="true"></i> 
+          {{ post.date | date: "%-d" }} de
+          {% assign m = post.date | date: "%-m" %}
+          {% case m %}
+            {% when '1' %}Enero
+            {% when '2' %}Febrero
+            {% when '3' %}Marzo
+            {% when '4' %}Abril
+            {% when '5' %}Mayo
+            {% when '6' %}Junio
+            {% when '7' %}Julio
+            {% when '8' %}Agosto
+            {% when '9' %}Septiembre
+            {% when '10' %}Octubre
+            {% when '11' %}Noviembre
+            {% when '12' %}Diciembre
+          {% endcase %} de 
+          {{ post.date | date: "%Y" }} - <i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</span>
   </p>
 </div>
 {% endfor %}
