añadido nuevo artículo

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
 
+
   <link rel="apple-touch-icon" sizes="180x180" href="{{ site.github.url }}/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ site.github.url }}/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ site.github.url }}/favicon-16x16.png">
@@ -18,6 +19,8 @@
   <meta name="msapplication-TileColor" content="#603cba">
   <meta name="theme-color" content="#ffffff">
 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="manifest" href="{{ site.github.url }}/manifest.webmanifest">
 
   <link rel="stylesheet" href="{{ site.github.url }}/assets/css/main.css">
@@ -27,10 +30,6 @@
   <!-- Use RSS-2.0 -->
   <!--<link href="{{ site.github.url }}/rss-feed.xml" type="application/rss+xml" rel="alternate" title="{{ site.title }} | {{ site.description }}"/>
   //-->
-
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quattrocento+Sans">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- LazyLoad images plugin -->
