--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,11 @@
 
   </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <!-- Blur load images-->
   <script src="https://cdn.jsdelivr.net/npm/progressively/dist/progressively.min.js"></script>
   <!-- Quicklink prefecth link -->
